@@ -361,6 +361,7 @@ hid_navigator_autosave					= SerialEM.chm::/html\menu_navigator.htm#hid_navigato
 hid_options_setpointlabelthreshold = SerialEM.chm::/html\menu_navigator.htm#hid_options_setpointlabelthreshold
 hid_navigator_convertmapstobytes = SerialEM.chm::/html\menu_navigator.htm#hid_navigator_convertmapstobytes
 hid_navigator_loadunbinned			= SerialEM.chm::/html\menu_navigator.htm#hid_navigator_loadunbinned
+hid_navoptions_usecurrentldparamsinri = SerialEM.chm::/html\menu_navigator.htm#hid_navoptions_usecurrentldparamsinri
 hid_navigator_writeasxml  			= SerialEM.chm::/html\menu_navigator.htm#hid_navigator_writeasxml
 hid_navigator_realign_scaling		= SerialEM.chm::/html\menu_navigator.htm#hid_navigator_realign_scaling
 hid_navigator_force_center_align	= SerialEM.chm::/html\menu_navigator.htm#hid_navigator_force_center_align
